# oto

./: Cargo.toml
sql/: init.sql
src/: cli.rs  decoder.rs  event.rs  main.rs  media.rs  player.rs  shared.rs  store.rs
