[package]
name = "oto"
version = "0.1.0"
edition = "2024"

[dependencies]
alsa = "0.10.0"
anyhow = "1.0.99"
clap = { version = "4.5.48", features = ["derive"] }
directories = "6.0.0"
id3 = "1.16.3"
ringbuf = "0.4.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
symphonia = { version = "0.5.4", features = ["all-codecs"]}
tokio = { version = "1.47.1", features = ["full"] }
walkdir = "2.5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
